--- a/form.html
+++ b/form.html
@@ -143,7 +143,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="inlineRadio4" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
   <div>
@@ -163,7 +163,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio8" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <br>
@@ -183,7 +183,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="inlineRadio12" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <br>
@@ -203,7 +203,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions4" id="inlineRadio16" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <br>
@@ -223,7 +223,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions5" id="inlineRadio20" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <br>
@@ -243,7 +243,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions6" id="inlineRadio24" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <br>
@@ -263,7 +263,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions7" id="inlineRadio28" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <br>
@@ -283,7 +283,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions8" id="inlineRadio32" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <br>
@@ -303,7 +303,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions9" id="inlineRadio36" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <br>
@@ -323,7 +323,7 @@
         </div>
         <div class="form-check form-check-inline">
           <input class="form-check-input" type="radio" name="inlineRadioOptions10" id="inlineRadio40" value="option1">
-          <label class="form-check-label" for="inlineRadio1">Always</label>
+          <label class="form-check-label" for="inlineRadio1">Almost Always</label>
         </div>
       </div>
       <a onclick="answer2(0)" class="btn btn-primary">Get Score!</a>
