update Chatistics Source

--- a/Chatistics/index.html
+++ b/Chatistics/index.html
@@ -70,18 +70,17 @@
     <a href="source/index.html">Link to Source</a>
 </p>
 <p>Rest assured, all the data is processed on device locally.</p>
-    <p class="card-text"><small class="text-muted">Last updated: 1st September 2020</small></p>
+    <p class="card-text"><small class="text-muted">Last updated: 25th July 2021</small></p>
   </div>
 </div>
 
 <div class="card mb-3 text-white" style="background-color:#252525">
 
   <div class="card-body">
-    <h5 class="card-title center">History of Chatistics</h5>
+    <h5 class="card-title center">Old Mockup</h5>
     <img src="artwork.jpeg" class="card-img-top" alt="...">
 
-    <p class="card-text margintop">Chatistics began as personal project on 6th April...
-      Rest coming soon...
+    <p class="card-text margintop">Chatistics began as personal project on 6th April, 2020 entirely due to boredom.
     </p>
 
 </div>
