--- a/Chatistics/source/index.html
+++ b/Chatistics/source/index.html
@@ -1,6 +1,22 @@
 <html><head><title>layout</title></head><body>
 
-  <h2>Layout Files</h2>
+
+<h1> Chatistics Code</h1>
+<p>For contributions or suggestions submit a pull request on my Github.</p>
+  
+<h2>Java Code</h2>
+<a href="java/MainActivity.java.html">MainActivity.java -- MAIN FILE</a>
+<br/>
+<a href="java/Names.java.html">Names.java</a><br />
+<a href="java/MoreData.java.html">MoreData.java</a>
+<br /><a href="java/WebViewActivity.java.html">WebViewActivity.java</a>
+<br /><a href="java/SettingsActivity.java.html">SettingsActivity.java</a>
+<br /><a href="java/OnSwipeTouchListener.java.html">OnSwipeTouchListener.java</a>
+<br />
+
+<h2>Layout Files</h2>
+  <a
+href="layout/single.xml.html">single.xml</a><br />
   <a
 href="layout/layout_emoji.xml.html">layout_emoji.xml</a><br /><a
 href="layout/activity_main.xml.html">activity_main.xml</a><br /><a
@@ -11,12 +27,6 @@ href="layout/final_activity.xml.html">final_activity.xml</a><br /><a
 href="layout/activity_result.xml.html">activity_result.xml</a><br /><a
 href="layout/activity_settings.xml.html">activity_settings.xml</a><br /><a
 href="layout/activity_additonal.xml.html">activity_additonal.xml</a><br
-/>
-<h2>Java Code</h2><a
-href="java/MainActivity.java.html">MainActivity.java</a><br /><a
-href="java/MoreData.java.html">MoreData.java</a><br /><a
-href="java/Names.java.html">Names.java</a><br /><a
-href="java/SettingsActivity.java.html">SettingsActivity.java</a><br
 />
 
 
