--- a/chatistics.html
+++ b/chatistics.html
@@ -2,16 +2,7 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JCMNFCVKM0"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-JCMNFCVKM0');
-</script>
     <meta charset="utf-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -40,7 +31,7 @@
     </style>
   </head>
   <body style = "background-color:#252525;">
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color:#000000;">
+  <nav class="navbar navbar-dark sticky-top" style="background-color:#000000;">
   <a class="navbar-brand ubuntu" href="#"style="color:white;">ASimpleSock</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -51,8 +42,8 @@
       <li class="nav-item">
         <a class="nav-link list" href="index.html">Home</a>
       </li>
-      <li class="nav-item list">
-        <a class="nav-link list" href="Apps.html">Apps</a>
+      <li class="nav-item active">
+        <a class="nav-link list" href="#">Apps</a>
       </li>
       <li class="nav-item">
         <a class="nav-link list" href="About.html">About</a>
@@ -71,39 +62,25 @@
 
 
 <div class="card mb-3 text-white" style="background-color:#252525">
-  <h1 class="card-title center ubuntu margintop"><img src="chat.png" height="42"> Chatistics</h1>
+  <img src="top.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title center">Open Source</h5>
     <p class="card-text">For those who want the source- I'll cut straight to the chase:
       <br>
-    <a href="Chatistics/source/index.html">Link to Source</a>
+    <a href="source/index.html">Link to Source</a>
 </p>
 <p>Rest assured, all the data is processed on device locally.</p>
-    <p class="card-text"><small class="text-muted">Last updated: 1st September 2020</small></p>
+    <p class="card-text"><small class="text-muted">Last updated: 25th July 2021</small></p>
   </div>
 </div>
-
-<div class="container"><div class="card" style="background-color:#323232">
-<div class="card-body">
-  <h5 class="card-title h" style="color:#FFFFFF">Chatistics now with Seamless Scrolling!</h5>
-  <p class="card-text" style="color:#FFFFFF">The new update brings an entirely new way to navigate. It's so much better that it's the default as of v6.0! Still, if you want to try the old one, the option is still there (in Settings)
-  </p>
-  <p class="card-text"><small class="text-muted">5th October, 2020.</small></p>
-</div>
-</div>
-</div>
-
-<hr>
-
-
 
 <div class="card mb-3 text-white" style="background-color:#252525">
 
   <div class="card-body">
-    <h5 class="card-title center">History of Chatistics</h5>
+    <h5 class="card-title center">Old Mockup</h5>
     <img src="artwork.jpeg" class="card-img-top" alt="...">
 
-    <p class="card-text margintop">A whole writeup of the history and making of Chatistics.
+    <p class="card-text margintop">Chatistics began as personal project on 6th April, 2020 entirely due to boredom.
     </p>
 
 </div>
@@ -118,6 +95,12 @@
 
 
 <br>
+
+
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
