--- a/chatistics.html
+++ b/chatistics.html
@@ -67,7 +67,7 @@
     <h5 class="card-title center">Open Source</h5>
     <p class="card-text">For those who want the source- I'll cut straight to the chase:
       <br>
-    <a href="source/index.html">Link to Source</a>
+    <a href="Chatistics/source/index.html">Link to Source</a>
 </p>
 <p>Rest assured, all the data is processed on device locally.</p>
     <p class="card-text"><small class="text-muted">Last updated: 25th July 2021</small></p>
