--- a/index.html
+++ b/index.html
@@ -56,6 +56,30 @@
 <br>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">All work and yes play.</h5>
+    <img src="squad.jpg" class="card-img-top" alt="..." width="2454">
+    <p class="card-text"><small class="text-muted">27th July, 2021.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">Automate Everything.</h5>
+    <p class="card-text">A friend said that to me. That combined with my laziness gave birth to the automatic class attending bot.
+    </p>
+    <img src="bot.png" class="card-img-top" alt="..." width="2454">
+    <p class="card-text"><small class="text-muted">22nd July, 2021.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
 <div class="card-body">
   <h5 class="card-title h">World Domination, Coming Soon.</h5>
   <p class="card-text">Let's see how long Greenland can stay safe.
