--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">Interfacing a parallel port.</h5>
+    <p class="card-text">My Mom's ancient machine's printer broke. So I interfaced the parallel port and got the ASCII data into a modern pc to print on a regular printer.</p>
+    <img src="parallel_port/parallel.jpeg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <a href="parallel_port/parallel.html" class="card-link">Code</a>
+    <a href="parallel_port/initialised.txt" class="card-link">Example Captured Output</a>
+    <p class="card-text"><small class="text-muted">25th December, 2021.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">All work and yes play.</h5>
     <img src="squad.jpg" class="card-img-top" alt="..." width="2454">
     <p class="card-text"><small class="text-muted">27th July, 2021.</small></p>
