--- a/index.html
+++ b/index.html
@@ -57,8 +57,21 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">Another Chatistics update.</h5>
+    <p class="card-text">Bases on how many days each month people talked. So short daily talks score more than long infrequent ones.</p>
+    <img src="interest.png" class="card-img-top" alt="..." width="2454">
+    <br>
+    <p class="card-text"><small class="text-muted">30th December, 2021.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">Interfacing a parallel port.</h5>
-    <p class="card-text">My Mom's ancient machine's printer broke. So I interfaced the parallel port and got the ASCII data into a modern pc to print on a regular printer.</p>
+    <p class="card-text">My Mom's ancient machine's printer broke. So I interfaced the parallel port and got the ASCII data into a modern pc to print through a regular printer.</p>
     <img src="parallel_port/parallel.jpeg" class="card-img-top" alt="..." width="2454">
     <br>
     <br>
