--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Another Chatistics update.</h5>
-    <p class="card-text">Bases on how many days each month people talked. So short daily talks score more than long infrequent ones.</p>
+    <p class="card-text">Based on how many days each month people talked. So short daily talks score more than long infrequent ones.</p>
     <img src="interest.png" class="card-img-top" alt="..." width="2454">
     <br>
     <p class="card-text"><small class="text-muted">30th December, 2021.</small></p>
