--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Removing watermark from PDF-s.</h5>
-    <p class="card-text">Editing PDF-s is a mess, especially when you have to make in changes in bulk. This is for me so next time I have to edit a PDF like removing the watermark, I don't have to go through the entire struggle again.</p>
+    <p class="card-text">Editing PDF-s is a mess, especially when you have to make in changes in bulk. This is for me so next time I have to edit a PDF, I don't have to go through the entire struggle again.</p>
     <a href="watermark.html" >The Process</a>
     <p class="card-text"><small class="text-muted">9th January, 2021.</small></p>
   </div>
