--- a/index.html
+++ b/index.html
@@ -120,6 +120,25 @@
   
   <hr>
 
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">Optimizing Chatistics.</h5>
+      <p class="card-text">Reduced the loading time of a ~30k messages chat from about 20 seconds to less than 8 seconds. That is a 60% decrease in processing time!
+      </p>
+      <p class="card-text"><b>Before</b></p>
+      <img src="pictures/before.png" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text"><b>After</b> 
+        <br>(Notice how AsyncTask#2 is drastically shorter)</p>
+      <img src="pictures/after.png" class="card-img-top" alt="..." width="2454">
+      <p class="card-text"><sup> *Not to scale</sup><br><small class="text-muted">1st July, 2021.</small></p>
+    </div>
+    </div>
+    </div>
+    
+    <hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
 <div class="card-body">
   <h5 class="card-title h">World Domination, Coming Soon.</h5>
