--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
       <h5 class="card-title h">Optimizing Chatistics.</h5>
-      <p class="card-text">Reduced the loading time of a ~30k messages chat from about 20 seconds to less than 8 seconds. That is a 60% decrease in processing time!
+      <p class="card-text">Reduced the loading time of a ~30k message chat from about 20 seconds to less than 8 seconds. That is a 60% decrease in processing time!
       </p>
       <p class="card-text"><b>Before</b></p>
       <img src="pictures/before.png" class="card-img-top" alt="..." width="2454">
