--- a/index.html
+++ b/index.html
@@ -235,6 +235,19 @@
 
 <hr>
 
+<div class="container"><div class="card" style="max-width: 25rem;">
+  
+  
+  <div class="card-body">
+    <h5 class="card-title h">Jackbox Party Packs Rated</h5>
+    <img src="pictures/jackbox.png" class="card-img-top" alt="..." width="2454">
+    <p class="card-text"><small class="text-muted">18th August, 2020.</small></p>
+  </div>
+  </div>
+  </div>
+  
+  <hr>
+
   <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Example Blog Post</h5>
