--- a/exiftool.html
+++ b/exiftool.html
@@ -52,7 +52,7 @@
   </div>
 </nav>
 
-<h3 class="ubuntu margin bottom center m-3"> Removing text from PDF-s</h3>
+<h3 class="ubuntu margin bottom center m-3"> EXIFTOOL Cheat Sheet</h3>
 <p class="m-3"><b>Viewing Metadata </b><br>Optional but informative. Do this to see all the tags.</p>
 <pre>
   <code> exiftool -a -G1 -s FILE/DIR </code>
