--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
   <div class="card-body">
     <h5 class="card-title h">All work and yes play.</h5>
     <img src="squad.jpg" class="card-img-top" alt="..." width="2454">
+    <a href="games.html" >More</a>
     <p class="card-text"><small class="text-muted">27th July, 2021.</small></p>
   </div>
   </div>
