--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
   
   <hr>
 
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">Campus Appreciation Time.</h5>
+      <img src="pictures/college.jpg" class="card-img-top" alt="..." width="2454">
+      <p class="card-text"><small class="text-muted">18th December, 2021.</small></p>
+    </div>
+    </div>
+    </div>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">All work and yes play.</h5>
