--- a/index.html
+++ b/index.html
@@ -57,22 +57,23 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    <h5 class="card-title h">Editing file metadata in bulk.</h5>
-    <p class="card-text">For when iCloud screws you over and decides all your photos were taken on the day you downloaded them.</p>
-    <a href="exiftool.html" >EXIFTOOL to the rescue!</a>
-    <p class="card-text"><small class="text-muted">23rd January, 2021.</small></p>
+    <h5 class="card-title h">My most ambitious print yet.</h5>
+    <img src="pictures/dragon.jpg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <a href="https://cults3d.com/en/3d-model/game/articulated-dragon-mcgybeer" >STL file</a>
+    <p class="card-text"><small class="text-muted">17th March, 2022.</small></p>
   </div>
   </div>
   </div>
   
-  <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Editing file metadata in bulk.</h5>
     <p class="card-text">For when iCloud screws you over and decides all your photos were taken on the day you downloaded them.</p>
     <a href="exiftool.html" >EXIFTOOL to the rescue!</a>
-    <p class="card-text"><small class="text-muted">23rd January, 2021.</small></p>
+    <p class="card-text"><small class="text-muted">23rd January, 2022.</small></p>
   </div>
   </div>
   </div>
@@ -84,7 +85,7 @@
     <h5 class="card-title h">Dead Cells.</h5>
     <p class="card-text">First winning build.</p>
     <img src="pictures/dead_cells.jpg" class="card-img-top" alt="..." width="2454">
-    <p class="card-text"><small class="text-muted">22nd January, 2021.</small></p>
+    <p class="card-text"><small class="text-muted">22nd January, 2022.</small></p>
   </div>
   </div>
   </div>
@@ -96,7 +97,7 @@
     <h5 class="card-title h">3rd Lockdown, 3rd Dimension.</h5>
     <p class="card-text">If you looked at this and went - 'oh benchy' then we should be friends.</p>
     <img src="pictures/benchy.jpeg" class="card-img-top" alt="..." width="2454">
-    <p class="card-text"><small class="text-muted">13th January, 2021.</small></p>
+    <p class="card-text"><small class="text-muted">13th January, 2022.</small></p>
   </div>
   </div>
   </div>
@@ -108,7 +109,7 @@
     <h5 class="card-title h">Removing watermark from PDF-s.</h5>
     <p class="card-text">Editing PDF-s is a mess, especially when you have to make in changes in bulk. This is for me so next time I have to edit a PDF, I don't have to go through the entire struggle again.</p>
     <a href="watermark.html" >The Process</a>
-    <p class="card-text"><small class="text-muted">9th January, 2021.</small></p>
+    <p class="card-text"><small class="text-muted">9th January, 2022.</small></p>
   </div>
   </div>
   </div>
@@ -152,6 +153,17 @@
     </div>
     </div>
     </div>
+
+    <hr>
+
+    <div class="container"><div class="card" style="max-width: 25rem;">
+      <div class="card-body">
+        <h5 class="card-title h">Image Mosaic.</h5>
+        <img src="pictures/mosaic.jpg" class="card-img-top" alt="..." width="2454">
+        <p class="card-text"><small class="text-muted">29th August, 2021.</small></p>
+      </div>
+      </div>
+      </div>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
