added_long_exposure

--- a/index.html
+++ b/index.html
@@ -333,6 +333,16 @@
   <hr>
 
   <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">Long Exposure of an LED Strip</h5>
+    
+      <img src="pictures/exposure.png" class="card-img-top" alt="..." width="2454">
+      <p class="card-text"><small class="text-muted">29th June, 2020.</small></p>
+    </div>
+    </div>
+  </div>
+
+  <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Example Blog Post</h5>
     <p class="card-text">So Divyansh had this awesome idea about a blog. Apoorvam is also doing something like that.
