--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">Practising Pixelmator</h5>
+    <img src="pictures/orgdarkpit.jpg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <img src="pictures/darkpit.jpg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <p class="card-text"><small class="text-muted">18th April, 2022.</small></p>
+  </div>
+  </div>
+  </div>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">My most ambitious print yet.</h5>
     <img src="pictures/dragon.jpg" class="card-img-top" alt="..." width="2454">
     <br>
