--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">How to extract a PDF from an app.</h5>
+    <img src="pictures/login.png" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">To prevent piracy some apps go above and beyond to safeguard their PDF-s. But not far enough...</p>
+    <a href="prep.html" >Read More</a>
+    <p class="card-text"><small class="text-muted">27th July, 2022.</small></p>
+  </div>
+  </div>
+  </div>
+
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">It's ALIVE!</h5>
+    <img src="pictures/pixel.jpg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">After dying a tragic death on 28th April, 2019, Marlin finally awoke again after getting a new screen and still no power button after more than 3 years! Long Live Marlin!</p>
+    <p class="card-text"><small class="text-muted">15th June, 2022.</small></p>
+  </div>
+  </div>
+  </div>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     
     <img src="pictures/darkpit.jpg" class="card-img-top" alt="..." width="2454">
     <br>
