--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <img src="pictures/mac.png" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">What your Mac looks like after you do the thing mentioned below.</p>
+    
+    <p class="card-text"><small class="text-muted">31 July, 2022.</small></p>
+  </div>
+  </div>
+  </div>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">How to extract a PDF from an app.</h5>
     <img src="pictures/login.png" class="card-img-top" alt="..." width="2454">
     <br>
@@ -75,7 +87,7 @@
     <img src="pictures/pixel.jpg" class="card-img-top" alt="..." width="2454">
     <br>
     <br>
-    <p class="card-text">After dying a tragic death on 28th April, 2019, Marlin finally awoke again after getting a new screen and still no power button after more than 3 years! Long Live Marlin!</p>
+    <p class="card-text">After dying a tragic death on 28th April 2019, more than 3 years ago; Marlin finally awoke again after getting a new screen and still no power button! Long Live Marlin!</p>
     <p class="card-text"><small class="text-muted">15th June, 2022.</small></p>
   </div>
   </div>
