--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">More Campus Appreciation.</h5>
+    <img src="pictures/mamc.jpg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text"><small class="text-muted">1st August, 2022.</small></p>
+  </div>
+  </div>
+  </div>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">Exposé.</h5>
     <img src="pictures/mac.png" class="card-img-top" alt="..." width="2454">
     <br>
     <br>
@@ -137,6 +149,16 @@
   </div>
   </div>
   </div>
+
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">3D Scan -> 3D Print.</h5>
+      <p class="card-text">YOU WOULDN'T <s>STEAL</s> PRINT A CAR.</p>
+      <img src="pictures/appu.jpeg" class="card-img-top" alt="..." width="2454">
+      <p class="card-text"><small class="text-muted">14th January, 2022.</small></p>
+    </div>
+    </div>
+    </div>
   
   <hr>
 
