--- a/index.html
+++ b/index.html
@@ -293,6 +293,19 @@
       
       <hr>
 
+      <div class="container"><div class="card" style="max-width: 25rem;">
+        <div class="card-body">
+          <h5 class="card-title h">Easter Egg!</h5>
+          <p class="card-text">Found it while (unsuccessfully) attempting to crack the license verification of Parallels. Love it when people leave behind easter eggs!
+          </p>
+          <img src="pictures/parallel.jpeg" class="card-img-top" alt="..." width="2454">
+          <p class="card-text"><small class="text-muted">21st May, 2021.</small></p>
+        </div>
+        </div>
+        </div>
+        
+        <hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
 <div class="card-body">
   <h5 class="card-title h">World Domination, Coming Soon.</h5>
