fixed line breaks and added copyright

--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">What a gazillion copyright violations looks like.</h5>
+    <img src="pictures/copyright.jpeg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text"><small class="text-muted">1st August, 2022.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">More Campus Appreciation.</h5>
     <img src="pictures/mamc.jpg" class="card-img-top" alt="..." width="2454">
     <br>
@@ -65,6 +78,8 @@
   </div>
   </div>
   </div>
+
+  <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
@@ -79,6 +94,8 @@
   </div>
   </div>
 
+  <hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">How to extract a PDF from an app.</h5>
@@ -92,6 +109,7 @@
   </div>
   </div>
 
+  <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
@@ -105,6 +123,8 @@
   </div>
   </div>
 
+  <hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     
@@ -114,6 +134,8 @@
   </div>
   </div>
   </div>
+
+  <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
@@ -126,6 +148,8 @@
   </div>
   </div>
   </div>
+
+  <hr>
   
 
 <div class="container"><div class="card" style="max-width: 25rem;">
@@ -149,6 +173,8 @@
   </div>
   </div>
   </div>
+
+  <hr>
 
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
@@ -234,6 +260,8 @@
       </div>
       </div>
       </div>
+
+      <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
