--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <hr>
 
-<div class="container"><div class="card" style="max-width: 25rem;">
+<!-- <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">More Campus Appreciation.</h5>
     <img src="pictures/mamc.jpg" class="card-img-top" alt="..." width="2454">
@@ -79,7 +79,7 @@
   </div>
   </div>
 
-  <hr>
+  <hr> -->
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
