--- a/index.html
+++ b/index.html
@@ -54,6 +54,48 @@
 </nav>
 
 <br>
+<!-- 
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">Another failed security implementation.</h5>
+    <img src="pictures/notability.png" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">This 52.92% saving comes at no cost to the perceptual quality. Plus the note now loads faster! Since Notability saves everything modularly- .note is just .zip; The rest was just <a href="https://imageoptim.com/mac">ImageOptim</a>.</p>
+    <p class="card-text"><small class="text-muted">9th January, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr> -->
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">Compressing Notability Notes.</h5>
+    <img src="pictures/notability.png" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">This 52.92% saving comes at no cost to the perceptual quality. Plus the note now loads faster! Since Notability saves everything modularly- .note is just .zip; The rest was just <a href="https://imageoptim.com/mac">ImageOptim</a>.</p>
+    <p class="card-text"><small class="text-muted">9th January, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">I have a problem.</h5>
+    <img src="pictures/switch.jpeg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">Please Nintendo, do NOT release a Switch Pro.</p>
+    <p class="card-text"><small class="text-muted">19th October, 2022.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
