--- a/index.html
+++ b/index.html
@@ -71,17 +71,32 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    <h5 class="card-title h">Compressing Notability Notes.</h5>
-    <img src="pictures/notability.png" class="card-img-top" alt="..." width="2454">
+    <h5 class="card-title h">RIP MacBook Battery.</h5>
+    <img src="pictures/battery.jpg" class="card-img-top" alt="..." width="2454">
     <br>
     <br>
-    <p class="card-text">This 52.92% saving comes at no cost to the perceptual quality. Plus the note now loads faster! Since Notability saves everything modularly- .note is just .zip; The rest was just <a href="https://imageoptim.com/mac">ImageOptim</a>.</p>
-    <p class="card-text"><small class="text-muted">9th January, 2023.</small></p>
+    <p class="card-text">Is that why the keyboard was bulging?</p>
+    <a href="macbook.html" >Read More</a>
+    <p class="card-text"><small class="text-muted">12th January, 2023.</small></p>
   </div>
   </div>
   </div>
 
   <hr>
+
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">Compressing Notability Notes.</h5>
+      <img src="pictures/notability.png" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text">This 52.92% saving comes at no cost to the perceptual quality. Plus the note now loads faster! Since Notability saves everything modularly- .note is just .zip; The rest was just <a href="https://imageoptim.com/mac">ImageOptim</a>.</p>
+      <p class="card-text"><small class="text-muted">9th January, 2023.</small></p>
+    </div>
+    </div>
+    </div>
+
+    <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
