--- a/macbook.html
+++ b/macbook.html
@@ -68,7 +68,9 @@
     <p class="m-3">The inside does look pretty for what it's worth...</p>
     <img src="pictures/nobattery.jpg" class="card-img-top" alt="..." width="2454">
     <p class="m-3">The aluminium foil is to stop the "acetone" from seeping in through the trackpad and damaging the screen.</p>
-    <p class="m-3">Put the speakers back, connect the cables back...</p>
+    <img src="pictures/tar.jpg" class="card-img-top" alt="..." width="2454">
+    <p class="m-3">Did you dip this in tar, Apple?</p>
+    <p class="m-3">Anyway, put the speakers back, connect the cables back...</p>
     <img src="pictures/speakers.jpg" class="card-img-top" alt="..." width="2454">
     <p class="m-3">Done? I might have to open this again someday to install the new battery. Till then I'm done. Whew.</p>
     <p class="card-text"><small class="text-muted">12th January, 2023.</small></p>
