--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
 </nav>
 
 <br>
-<!-- 
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    <h5 class="card-title h">Another failed security implementation.</h5>
-    <img src="pictures/notability.png" class="card-img-top" alt="..." width="2454">
+    <h5 class="card-title h">Home Automation.</h5>
+    <img src="pictures/automation.png" class="card-img-top" alt="..." width="2454">
     <br>
     <br>
-    <p class="card-text">This 52.92% saving comes at no cost to the perceptual quality. Plus the note now loads faster! Since Notability saves everything modularly- .note is just .zip; The rest was just <a href="https://imageoptim.com/mac">ImageOptim</a>.</p>
-    <p class="card-text"><small class="text-muted">9th January, 2023.</small></p>
+    <p class="card-text">Something I didn't know I needed until I got it. Cannot recommend <a href="https://www.home-assistant.io">Home Assistant</a> enough.</p>
+    <p class="card-text"><small class="text-muted">13th January, 2023.</small></p>
   </div>
   </div>
   </div>
 
-  <hr> -->
+  <hr>
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
