--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">Breaking Encryption?</h5>
+    <img src="pictures/dem.png" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">Just give us DRM free files we can store. Why do you have to make my life harder? Oh well. Let's crack this thing wide open!</p>
+    <a href="dem.html">Read More</a>
+    <p class="card-text"><small class="text-muted">14th January, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">Home Automation.</h5>
     <img src="pictures/automation.png" class="card-img-top" alt="..." width="2454">
     <br>
@@ -184,7 +199,7 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
-    
+    <h5 class="card-title h">Courtesy Organic Supports.</h5>
     <img src="pictures/darkpit.jpg" class="card-img-top" alt="..." width="2454">
     <br>
     <p class="card-text"><small class="text-muted">18th April, 2022.</small></p>
