--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">Setting up an automation node.</h5>
+    <img src="pictures/blue.jpg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">It took my entire toolkit to get this done. See the process below -></p>
+    <a href="ha.html">See More</a>
+    <p class="card-text"><small class="text-muted">14th January, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">Breaking Encryption?</h5>
     <img src="pictures/dem.png" class="card-img-top" alt="..." width="2454">
     <br>
@@ -91,7 +106,7 @@
     <br>
     <br>
     <p class="card-text">Is that why the keyboard was bulging?</p>
-    <a href="macbook.html" >Read More</a>
+    <a href="macbook.html" >The Repair</a>
     <p class="card-text"><small class="text-muted">12th January, 2023.</small></p>
   </div>
   </div>
