--- a/ha.html
+++ b/ha.html
@@ -83,7 +83,7 @@
     <img src="pictures/printed.jpeg" class="card-img-top" alt="..." width="2454">
     <p class="m-3">And here it is after installation which involved obscene amounts of glue gun usage -></p>
     <img src="pictures/plated.jpeg" class="card-img-top" alt="..." width="2454">
-    <p class="m-3">Success! I won't bore you with the code now. Maybe next time :)</p>
+    <p class="m-3">Success! Now the front door light turns on when it's dark and someone comes to the door! Plus a secret thing which the other relay does. I won't bore you with the code now. Maybe next time :)</p>
     <br>
     
     <p class="card-text"><small class="text-muted">14th January, 2023.</small></p>
