--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
     <br>
     <br>
     <p class="card-text">It took my entire toolkit to get this done. See the process below -></p>
-    <a href="ha.html">See More</a>
     <p class="card-text"><small class="text-muted">14th January, 2023.</small></p>
   </div>
   </div>
@@ -88,7 +87,7 @@
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Home Automation.</h5>
-    <img src="pictures/automation.png" class="card-img-top" alt="..." width="2454">
+    <img src="pictures/home.jpg" class="card-img-top" alt="..." width="2454">
     <br>
     <br>
     <p class="card-text">Something I didn't know I needed until I got it. Cannot recommend <a href="https://www.home-assistant.io">Home Assistant</a> enough.</p>
