--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     <br>
     <br>
     <p class="card-text">It took my entire toolkit to get this done. See the process below -></p>
-    <p class="card-text"><small class="text-muted">14th January, 2023.</small></p>
+    <a href="ha.html">See More</a>
+    <p class="card-text"><small class="text-muted">15th January, 2023.</small></p>
   </div>
   </div>
   </div>
