--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
 
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
+    <h5 class="card-title h">AI Object Detection on CCTV cameras. </h5>
+    <img src="pictures/frigate.jpeg" class="card-img-top" alt="..." width="2454">
+    <br>
+    <br>
+    <p class="card-text">This just added so many possibilities to an otherwise obsolete CCTV.  I really should get a beefier server at this point, the Raspberry Pi is crying for help.</p>
+    <p class="card-text"><small class="text-muted">17th January, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
     <h5 class="card-title h">Setting up an automation node.</h5>
     <img src="pictures/blue.jpg" class="card-img-top" alt="..." width="2454">
     <br>
