--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <br>
     <br>
     <p class="card-text">This just added so many possibilities to an otherwise obsolete CCTV.  I really should get a beefier server at this point, the Raspberry Pi is crying for help.</p>
+    <a href="frigate.html">Read More</a>
     <p class="card-text"><small class="text-muted">17th January, 2023.</small></p>
   </div>
   </div>
