--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
 
   <hr>
 
+  <div class="container"><div class="card" style="max-width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title h">The CCTV Camera DVR Broke, Perfect!</h5>
+      <img src="pictures/cctv.jpg" class="card-img-top" alt="..." width="2454">
+      <br>
+      <br>
+      <p class="card-text">Now I have a perfectly good explanation for why I need to take it apart. I have waited too long for this day.</p>
+      <a href="cctv.html">See More</a>
+      <p class="card-text"><small class="text-muted">16th January, 2023.</small></p>
+    </div>
+    </div>
+    </div>
+  
+    <hr>
+
 <div class="container"><div class="card" style="max-width: 25rem;">
   <div class="card-body">
     <h5 class="card-title h">Setting up an automation node.</h5>
