--- a/cctv.html
+++ b/cctv.html
@@ -76,8 +76,10 @@
     <p class="m-3">I did what I had to. DESTROY THE BUZZER.</p>
     <img src="pictures/buzzer.jpeg" class="card-img-top" alt="..." width="2454">
     <p class="m-3">Okay perfect now. Almost. I guess I took the messing around thing quite literally.</p>
+    <img src="pictures/eww.jpeg" class="card-img-top" alt="..." width="2454">
+    <p class="m-3">--></p>
     <img src="pictures/mess.jpg" class="card-img-top" alt="..." width="2454">
-    <p class="m-3">Time to put it all in a box and call it a day.</p>
+     <p class="m-3">Time to put it all in a box and call it a day.</p>
     <img src="pictures/box.jpeg" class="card-img-top" alt="..." width="2454">
     <p class="m-3">And look at how much space we saved as compared to the original box! Now it can stay hidden as it is supposed to!</p>
     <img src="pictures/fin.jpeg" class="card-img-top" alt="..." width="2454">
