--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p class="card-text">These Touch Switches powered by an ESP32 work by detecting changes in the electrical charge on them. Basically like the capacitive touch screen on a phone. 
        <!-- <small>(Since I wasn't going to wait around for each video to download before moving on to the next one, there's 8 parallel downloads as seen by the 8 terminal windows)</small> -->
     </p>
-    <p class="card-text"><small class="text-muted">18th January, 2023.</small></p>
+    <p class="card-text"><small class="text-muted">19th January, 2023.</small></p>
   </div>
   </div>
   </div>
@@ -81,12 +81,32 @@
     <br>
     <p class="card-text">This just added so many possibilities to an otherwise obsolete CCTV.  I really should get a beefier server at this point, the Raspberry Pi is crying for help.</p>
     <a href="frigate.html">Read More</a>
+    <p class="card-text"><small class="text-muted">18th January, 2023.</small></p>
+  </div>
+  </div>
+  </div>
+
+  <hr>
+
+
+<div class="container"><div class="card" style="max-width: 25rem;">
+  <div class="card-body">
+    <h5 class="card-title h">Another Educational Videos Heist </h5>
+
+    <p class="card-text">This one was from a well built app. Had to manually get the link to the m3u8 file for each video and immediately run an ffmpeg command to download it before the authorization expired.
+      <br>
+      <br>
+      <img src="pictures/heist.jpeg" class="card-img-top" alt="..." width="2454">
+
+      <small>(Since I wasn't going to wait around for each video to download before moving on to the next one, there's 8 parallel downloads as seen by the 8 terminal windows)</small>
+    </p>
     <p class="card-text"><small class="text-muted">17th January, 2023.</small></p>
   </div>
   </div>
   </div>
 
   <hr>
+
 
   <div class="container"><div class="card" style="max-width: 25rem;">
     <div class="card-body">
