--- a/pyq/index.html
+++ b/pyq/index.html
@@ -1,3 +1,54 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JCMNFCVKM0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JCMNFCVKM0');
+</script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>ASimpleSock</title>
+    <style>
+
+      .ubuntu { font-family: 'Ubuntu', sans-serif }
+      .list { font-family: 'Ubuntu', sans-serif }
+      .dates { color: #D3D3D3 }
+      .logo { height: 1.5rem; margin-right:0.5rem}
+      .center {text-align:center }
+      .heading {size:10rem}
+      .margintop {margin-top:0.8rem }
+      .margindown {margin-bottom:0.5rem }
+      .bleed {width: 100%}
+      .almostbleed {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%;
+}
+
+
+    </style>
+  </head>
+ 
+
+
+
+
+
+
+
+<br>
+<h4>Previous Year Questions</h4>
 <a href="Anatomy.html">Anatomy</a> <br>
 <a href="Physiology.html">Physiology</a> <br>
 <a href="Biochemistry.html">Biochemistry</a> <br>
