--- a/pyq/index.html
+++ b/pyq/index.html
@@ -47,7 +47,8 @@
 
 
 
-<br>
+<div class="container">
+    <br>
 <h4>Previous Year Questions</h4>
 <a href="Anatomy.html">Anatomy</a> <br>
 <a href="Physiology.html">Physiology</a> <br>
@@ -68,3 +69,4 @@
 <a href="Anaesthesia.html">Anaesthesia</a> <br>
 <a href="Radiology.html">Radiology</a> <br>
 <a href="Orthopaedics.html">Orthopaedics</a> <br>
+</div>
